<?xml version="1.0" encoding="UTF-8"?>

<androidx.cardview.widget.CardView
    android:layout_marginBottom="10dp"
    android:backgroundTint="@color/colorAccent"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout android:layout_height="match_parent"

        android:layout_width="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/customer_name"
            android:id="@+id/CustName"/>

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustName"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            android:contentDescription="@string/todo" />

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="18sp"
            android:text="@string/account_number"
            android:id="@+id/AccNum"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/phone_icon"
            android:layout_below="@+id/CustName"
            android:layout_toEndOf="@+id/phone_icon" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/account_balance"
            android:id="@+id/AccBal"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/AccNum"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/AccNum" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>