<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/bank_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/bank_image"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/bank_img"
        android:background="@color/colorPrimary"
        android:onClick="viewAllCustomers"
        android:text="@string/view_all"
        android:textColor="#ffff"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:textSize="29sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="@string/bank_name" />
</RelativeLayout>